--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "localstorage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AbrahamTrenyan.github.io/localstorage",
+  "homepage": "https://AbrahamTrenyan.github.io/c31-localStorage",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
